--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,28 +2,38 @@
 
 services:
   audio-recorder:
-    build: .
-    container_name: audio-recorder-app
-    ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=production
-    restart: unless-stopped
-    
-  # Opcional: Para desarrollo con hot reload
-  audio-recorder-dev:
     build:
       context: .
-      target: development-dependencies-env
-    container_name: audio-recorder-dev
-    ports:
-      - "5173:5173"
-    volumes:
-      - .:/app
-      - /app/node_modules
+      target: production
+    user: "1000:1000"
     environment:
-      - NODE_ENV=development
-    command: npm run dev
+      - NODE_ENV=production
+      - PORT=3000
     restart: unless-stopped
-    profiles:
-      - dev
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
+    security_opt:
+      - no-new-privileges:true
+    read_only: true
+    tmpfs:
+      - /tmp
+    ports:
+      - "3000:3000"
+
+networks:
+  app-network:
+    driver: bridge
